[package]
name = "ice-repos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
reqwasm = "0.5.0"
gloo = "0.6.0"
yew-router = "0.16.0"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.56"
features = [
    "HtmlInputElement",
]
